--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "monitor": "nodemon ./bin/www"
   },
   "dependencies": {
+    "azure-storage": "^2.10.2",
     "body-parser": "^1.18.3",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
-    "lokijs": "^1.5.5",
+    "mongodb": "^2.2.36",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
